# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml
.github/workflows/: my.yml
page_analyzer/: analizer.py  app.py  page_db.py
page_analyzer/templates/: index.html  layout.html  new.html  urls.html
